# atria

./: .coveragerc  .env.example  .flake8  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  manage.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
atria/: admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
atria/apis/: __init__.py  accounts.py  default.py  rates.py
contents/: settings.py
docs/: ENVIRONMENT.md  SECURITY.md
legacy/: requirements.txt
scripts/: setup_dev.py
